bin_PROGRAMS = bdpandl bdpandl-decode
bdpandl_SOURCES = bdpandl.c dlcommon.c dlcommon.h dlinfo.c dlinfo.h dlpart.c \
				  dlpart.h scrolling_display.c scrolling_display.h \
				  err_handler.c err_handler.h
bdpandl_LDFLAGS = -Wall -lpthread

bdpandl_decode_SOURCES = bdpandl-decode.c err_handler.c err_handler.h
bdpandl_decode_LDFLAGS = -Wall
