bin_PROGRAMS = bdpandl bdpandl-decode
bdpandl_SOURCES = bdpandl.c dlcommon.c dlcommon.h dlinfo.c dlinfo.h dlpart.c \
		  dlpart.h dlscrolling.c dlscrolling.h \
		  dllist.c dllist.h err_handler.c err_handler.h
bdpandl_LDFLAGS = -Wall -Wextra -lpthread

bdpandl_decode_SOURCES = bdpandl-decode.c err_handler.c err_handler.h
bdpandl_decode_LDFLAGS = -Wall
